# parser

./: .gitignore  LICENSE  README.md  ci.sh  extract.py  pyproject.toml  schedario.py
nap/: __init__.py  definitions.py  entries.py  helpers.py  models.py  normalization.py
tests/: test_definitions.py  test_entries.py  test_extract.py  test_normalization.py  test_schedario.py
