[tool.poetry]
name = "napoletano"
version = "0.1.0"
description = ""
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
pdfplumber = "^0.6.0"

[tool.poetry.dev-dependencies]
pdfplumber = "^0.6.0"
mypy = "^0"
pytest = "^7.0.1"
clj = "^0.2.1"

[[tool.mypy.overrides]]
module = [
    "pdfplumber",
    "pdfplumber.display",
    "pdfplumber.page",
    "clj"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
